// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VisualTimestamp /> renders "just now", relative time with default \`timestampFormat\` 1`] = `
.c1 {
  fill: currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 svg {
  color: #7D7D7D;
}

.c2 {
  font-family: ProximaNovaCond,sans-serif;
  font-size: 10px;
  font-weight: 400;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  color: #7D7D7D;
  text-transform: uppercase;
  text-align: center;
  line-height: 7px;
  margin-top: 8px;
  white-space: nowrap;
}

<div
  class="c0"
  type="default"
>
  <span
    class="c1"
  >
    <svg
      aria-label="Clock24 icon"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.5 2a10.5 10.5 0 1 1 0 21 10.5 10.5 0 0 1 0-21zm0 1a9.5 9.5 0 1 0 0 19 9.5 9.5 0 0 0 0-19zm0 4c.28 0 .5.22.5.5v5.3l5.34-1.77a.5.5 0 1 1 .32.94l-6 2a.5.5 0 0 1-.66-.47v-6c0-.28.22-.5.5-.5z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <div
    class="c2"
  >
    Just now
  </div>
</div>
`;

exports[`<VisualTimestamp /> renders a deals icon for partnerEditorial 1`] = `
.c1 {
  fill: currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 svg {
  color: #7D7D7D;
}

<div
  class="c0"
  type="default"
>
  <span
    class="c1"
  >
    <svg
      aria-label="Clock24 icon"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.5 2a10.5 10.5 0 1 1 0 21 10.5 10.5 0 0 1 0-21zm0 1a9.5 9.5 0 1 0 0 19 9.5 9.5 0 0 0 0-19zm0 4c.28 0 .5.22.5.5v5.3l5.34-1.77a.5.5 0 1 1 .32.94l-6 2a.5.5 0 0 1-.66-.47v-6c0-.28.22-.5.5-.5z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</div>
`;

exports[`<VisualTimestamp /> renders a default clock icon for fmgNonSatire 1`] = `
.c1 {
  fill: currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 svg {
  color: #7D7D7D;
}

<div
  class="c0"
  type="default"
>
  <span
    class="c1"
  >
    <svg
      aria-label="Clock24 icon"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.5 2a10.5 10.5 0 1 1 0 21 10.5 10.5 0 0 1 0-21zm0 1a9.5 9.5 0 1 0 0 19 9.5 9.5 0 0 0 0-19zm0 4c.28 0 .5.22.5.5v5.3l5.34-1.77a.5.5 0 1 1 .32.94l-6 2a.5.5 0 0 1-.66-.47v-6c0-.28.22-.5.5-.5z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</div>
`;

exports[`<VisualTimestamp /> renders a promotions icon for sponsored fmgBusiness 1`] = `
.c1 {
  fill: currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 svg {
  color: #7D7D7D;
}

<div
  class="c0"
  type="default"
>
  <span
    class="c1"
  >
    <svg
      aria-label="Clock24 icon"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.5 2a10.5 10.5 0 1 1 0 21 10.5 10.5 0 0 1 0-21zm0 1a9.5 9.5 0 1 0 0 19 9.5 9.5 0 0 0 0-19zm0 4c.28 0 .5.22.5.5v5.3l5.34-1.77a.5.5 0 1 1 .32.94l-6 2a.5.5 0 0 1-.66-.47v-6c0-.28.22-.5.5-.5z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</div>
`;

exports[`<VisualTimestamp /> renders an animated live indicator 1`] = `
.c0 {
  font-size: 10px;
  -webkit-letter-spacing: 0.21px;
  -moz-letter-spacing: 0.21px;
  -ms-letter-spacing: 0.21px;
  letter-spacing: 0.21px;
  font-weight: bold;
  text-transform: uppercase;
  color: #D24A1D;
}

.c0::before {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  content: '';
  width: 10px;
  height: 10px;
  border-radius: 10px;
  background-color: #D24A1D;
  margin: 0 auto;
  -webkit-animation: eWJADu 4s cubic-bezier(0.4,0,0.2,1) infinite;
  animation: eWJADu 4s cubic-bezier(0.4,0,0.2,1) infinite;
}

<span
  class="c0"
>
  Live
</span>
`;

exports[`<VisualTimestamp /> renders an editorial splice icon for fmgNonSatire 1`] = `
.c1 {
  fill: currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 svg {
  color: #7D7D7D;
}

<div
  class="c0"
  type="default"
>
  <span
    class="c1"
  >
    <svg
      aria-label="Clock24 icon"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.5 2a10.5 10.5 0 1 1 0 21 10.5 10.5 0 0 1 0-21zm0 1a9.5 9.5 0 1 0 0 19 9.5 9.5 0 0 0 0-19zm0 4c.28 0 .5.22.5.5v5.3l5.34-1.77a.5.5 0 1 1 .32.94l-6 2a.5.5 0 0 1-.66-.47v-6c0-.28.22-.5.5-.5z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</div>
`;

exports[`<VisualTimestamp /> renders without any props 1`] = `
.c1 {
  fill: currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 svg {
  color: #7D7D7D;
}

<div
  class="c0"
  type="default"
>
  <span
    class="c1"
  >
    <svg
      aria-label="Clock24 icon"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.5 2a10.5 10.5 0 1 1 0 21 10.5 10.5 0 0 1 0-21zm0 1a9.5 9.5 0 1 0 0 19 9.5 9.5 0 0 0 0-19zm0 4c.28 0 .5.22.5.5v5.3l5.34-1.77a.5.5 0 1 1 .32.94l-6 2a.5.5 0 0 1-.66-.47v-6c0-.28.22-.5.5-.5z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</div>
`;
